--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
 <!-- p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p-->
 
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: renyu.yang1 AT gmail DOT com   or &nbsp; </p>
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  r.yang1 AT leeds DOT ac DOT uk  &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
 <a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -202,26 +201,17 @@
 <div id="div_news">
 <p class="Bolder">What's New </p>
 
+<p><span class="style11">(23/02/2021) I will serve as Track Chair for IEEE International Conference on Cloud Computing (CLOUD'21). See the <a href ="https://conferences.computer.org/cloud/2021/cfp/">Call for Papers</a> 
+</span></p>
+
 <p><span class="style11">(31/01/2021) Our work on resource efficient incremental learning for heterogenous information networks is accepted by IEEE Trans. on Computers (TC). </span></p>
 
-<p><span class="style11">(17/01/2021) Our work on streaming social event detection is accepted by ACM Transactions on Knowledge Discovery from Data (TKDD). </span></p>
+<p><span class="style11">(17/01/2021) Our work on streaming social event detection is accepted by ACM Trans. on Knowledge Discovery from Data (TKDD). </span></p>
 
-<p><span class="style11">(19/10/2020) I will serve as PC member of International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21). 
+<p><span class="style11">(19/10/2020) I will serve as PC member for International Joint Conferences on Artificial Intelligence 2021 (IJCAI'21).
 </span></p>
 
-
-<p><span class="style11">(25/01/2020) Our paper 
-"Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
-</span></p>
-
-<p><span class="style11">(25/01/2020) Our paper 
-"Performance-aware Speculative Resource Oversubscription for Large-scale Clusters" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS).  
-</span></p>
-
-
-<p><span class="style11">(10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
-
-<p><span class="style11">~$ No news is good news...Check more previous events in <a href="news.html">old events</a>. </span></p>
+<p><span class="style11">~$ No news is good news...Check <a href="news.html">older events</a>. </span></p>
 </div>
 
 
@@ -286,9 +276,13 @@ and 4) applied machine/deep learning for representation learning, anomaly detect
 
 <p><span class="style11">
 
+<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
+
+<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
+</span></p>
+
 <p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 	
 <p><span class="style11">&bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. <a href="paper/tpds2019-gapar-full.pdf">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
@@ -296,9 +290,6 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 <p><span class="style11">&bull; P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. <a href="paper/tsc2016b.pdf">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
 
 <p><span class="style11">&bull;  R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
-
-<p><span class="style11">&bull; H.Peng, J.Li, Y.Song, R.Yang, R.Ranjan, P.S.Yu and L.He. <a href="paper/tkdd2021.pdf"> Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks</a>.  ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 
-</span></p>
 
 <p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
@@ -362,13 +353,16 @@ I have the opportunity to work closely with many institutes around the world and
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni.), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds), Gingfung Yeung (2018.1- , Lancaster University, UK), Yiming Hei (2019.9- , Beihang Uni.) </span></p>
+<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.5- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Gingfung Yeung (2018.1- , Lancaster University, UK, with Dr. Peter Garraghan), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng) </span></p>
 
 <p><span class="style11">&bull; Undergraduate Final Year Project Students: Chris London, Charlee Boyle, Kunchaya Soinak, Sam Hepburn (Uni. of Leeds, 2020 Autumn) </span></p>
 
+<p><span class="style11">&bull; MSc Projects: Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (Uni. of Leeds, 2021) </span></p>
+
+
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
-<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS) 
+<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
 </span></p> 
 
 <p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni.), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
@@ -418,7 +412,10 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; Program Chair: IEEE International Conference on Joint Cloud Computing (JCC) 2020, 2019, etc. </span></p>
 
-<p><span class="style11">&bull; PC Member: IJCAI'21, ACM/IEEE UCC'18-'20,  IEEE/ACM BDCAT'16-'20, etc. </span></p>
+<p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
+
+
+<p><span class="style11">&bull; PC Member: IJCAI'21, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
 <p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
@@ -467,7 +464,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  updated by Dec. 2020 </span></p>
+<p><span class="style11">  updated by Feb. 2021 </span></p>
 
 </td>
 
