--- a/news.html
+++ b/news.html
@@ -71,90 +71,109 @@
 
 <title>Renyu YANG's Homepage</title>
 <body>
-<p><span class="Bolder">News </span></p>
+<p><span class="Bolder">Events</span></p>
   
 
-<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  (23/01/2013) My homepage is open!</span>
+<p><span class="style11">(25/01/2020) Our paper 
+"Orchestrating Development Lifecycle of ML-Based IoT Applications" has been accepted to publish in ACM Computing Surveys (CSUR) 2020. 
+</span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (09/03/2013) the paper &quot;improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement&quot; has been awarded as the best Paper </span><span class="style11">during the International Symposium of Autonomous Distributed Systems&quot; ISADS 2013</span></p>
+<p><span class="style11">(25/01/2020) Our paper 
+"Performance-aware Speculative Resource Oversubscription for Large-scale Clusters" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS).  
+</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/3/2013) I attended IEEE SOSE 2013 </span></p>
 
-<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/08/2013) Our paper was accepted by IEEE HPCC 2013</span></p>
+<p><span class="style11">(10/10/2019) A recent survey study on the management of development lifecycle for ML-Based IoT Applications <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a>  </span></p>
 
-<span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (09/09/2013) Our paper was accepted by IEEE CloudCom 2013</span></p>
+<p><span class="style11">  (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS). </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/11/2013) a presentation was given at IEEE HPCC 2013 </span></p>
+<p><span class="style11">  (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/12/2013) a presentation was given  at IEEE CloudCom 2013 </span></p>
 
-<span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (23/10/2013) Guanghua Scholarship for exellent student is awarded </span></span></p>
+<hr style="width:100%;text-align:left;margin-left:0">
 
-<span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (14/01/2014) Our paper was accepted by IEEE SOSE-iVCE 2014</span></p>
+<p><span class="Bolder">"Old" Events Before 2019</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/02/2014) I obtained the research and development internship position in Alibaba Cloud Computing Inc. </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (24/05/2014) Our papers are accepted by VLDB 2014 and LISA 2014! Big Congrats! </span> </p>
+<span class="style11">  (23/01/2013) My homepage is open!</span>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) Our papers are accepted by IEEE ICPADS 2014 </span></p>
+<p><span class="style11">   (09/03/2013) the paper &quot;improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement&quot; has been awarded as the best Paper </span><span class="style11">during the International Symposium of Autonomous Distributed Systems&quot; ISADS 2013</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2014) a presentation was given at VLDB 2014 </span></p>
+<span class="STYLE11">   (25/3/2013) I attended IEEE SOSE 2013 </span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (17/12/2014) a presentation was given at IEEE ICPADS 2014 </span></p>
+<span class="style11">  (15/08/2013) Our paper was accepted by IEEE HPCC 2013</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/06/2015) Our recent works on reliable task execution and resource management by leveraging cost-effective component failovers has been submitted to IEEE Transactions on Servie Computing and under review now. </span></p>
+<span class="style11">  (09/09/2013) Our paper was accepted by IEEE CloudCom 2013</span></p>
 
-<span class="STYLE11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (04/11/2015) I passed the Ph.D thesis proposal oral defence and commence to pursue my ph.D degree in the next year! </span></p>
+<span class="STYLE11">   (16/11/2013) a presentation was given at IEEE HPCC 2013 </span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (21/10/2015) Our paper has been accepted by IEEE HASE 2016</span></p>
+<span class="STYLE11">   (03/12/2013) a presentation was given  at IEEE CloudCom 2013 </span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (25/09/2015) Our paper has been accepted by Springer IoV 2015 </span></p>
+<span class="style11">   (23/10/2013) Guanghua Scholarship for exellent student is awarded </span></span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/12/2015) Two papers are submitted to IEEE ICDCS 2016 and Transactions on Services Computing and currently under review. </span></p>
+<span class="style11">   (14/01/2014) Our paper was accepted by IEEE SOSE-iVCE 2014</span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/01/2016) The visionary paper "Computing at Massive Scale: Scalability and Dependability Challenges" is invited to publish and present at IEEE SOSE 2016 </span></p>
+<span class="STYLE11">   (17/02/2014) I obtained the research and development internship position in Alibaba Cloud Computing Inc. </span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (04/03/2016) Our paper <a href="paper/tsc2016.pdf">"Reliable Computing Service in Massive-scale Systems Through Rapid Low-cost Failover"</a> is accepted by IEEE Transactions on Services Computing(TSC). Big congrats! </span></p>
+<span class="STYLE11">   (24/05/2014) Our papers are accepted by VLDB 2014 and LISA 2014! Big Congrats! </span> </p>
 
-<p><span class="style11">  &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I visited University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
+<span class="STYLE11">   (05/09/2014) Our papers are accepted by IEEE ICPADS 2014 </span></p>
 
-<p><span class="style11"> &nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/03/2016) PC Member of IEEE FiCloud 2016 and IEEE/ACM BDCAT 2016</span></p>
+<span class="STYLE11">   (05/09/2014) a presentation was given at VLDB 2014 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (20/04/2016) Our paper "Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters" is accepted by IEEE DSN 2016.  </span></p>
+<span class="STYLE11">   (17/12/2014) a presentation was given at IEEE ICPADS 2014 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/09/2016) Our <a href="paper/icpads2016.pdf">paper</a> that focuses on RDF data management is accepted by IEEE ICPADS 2016.  </span></p>
+<span class="STYLE11">   (20/06/2015) Our recent works on reliable task execution and resource management by leveraging cost-effective component failovers has been submitted to IEEE Transactions on Servie Computing and under review now. </span></p>
+
+<span class="STYLE11">   (04/11/2015) I passed the Ph.D thesis proposal oral defence and commence to pursue my ph.D degree in the next year! </span></p>
+
+<p><span class="style11">   (21/10/2015) Our paper has been accepted by IEEE HASE 2016</span></p>
+
+<p><span class="style11">   (25/09/2015) Our paper has been accepted by Springer IoV 2015 </span></p>
+
+<p><span class="style11">   (18/12/2015) Two papers are submitted to IEEE ICDCS 2016 and Transactions on Services Computing and currently under review. </span></p>
+
+<p><span class="style11">   (18/01/2016) The visionary paper "Computing at Massive Scale: Scalability and Dependability Challenges" is invited to publish and present at IEEE SOSE 2016 </span></p>
+
+<p><span class="style11">   (04/03/2016) Our paper <a href="paper/tsc2016.pdf">"Reliable Computing Service in Massive-scale Systems Through Rapid Low-cost Failover"</a> is accepted by IEEE Transactions on Services Computing(TSC). Big congrats! </span></p>
+
+<p><span class="style11">    (28/03/2016) I attend IEEE SOSE 2016 at Oxford, UK. In April I visited University of Oxford, University of Leeds and University of Edinburgh, working with my collaborators on our recent joint projects and papers. </span></p>
+
+<p><span class="style11">   (28/03/2016) PC Member of IEEE FiCloud 2016 and IEEE/ACM BDCAT 2016</span></p>
+
+<p><span class="style11">  (20/04/2016) Our paper "Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters" is accepted by IEEE DSN 2016.  </span></p>
+
+<p><span class="style11">  (01/09/2016) Our <a href="paper/icpads2016.pdf">paper</a> that focuses on RDF data management is accepted by IEEE ICPADS 2016.  </span></p>
  
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/09/2016) Our paper <a href="paper/tsc2016b.pdf">"Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters"</a>&nbsp; is accepted by IEEE Transactions on Services Computing(TSC). </span></p>
+<p><span class="style11">  (05/09/2016) Our paper <a href="paper/tsc2016b.pdf">"Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters"</a>&nbsp; is accepted by IEEE Transactions on Services Computing(TSC). </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (03/10/2016) Our paper <a href="paper/hpcc2016.pdf">"An Optimized Storage Method for Vehicle Trajectory Data Exploiting Trajectory Patterns"</a>&nbsp; is accepted by IEEE HPCC 2016 </span></p>
+<p><span class="style11">  (03/10/2016) Our paper <a href="paper/hpcc2016.pdf">"An Optimized Storage Method for Vehicle Trajectory Data Exploiting Trajectory Patterns"</a>&nbsp; is accepted by IEEE HPCC 2016 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (21/11/2016) Our paper <a href="paper/ic2017.pdf">"Fog Orchestration for Internet of Things Services"</a>&nbsp; is accepted by IEEE Internet Computing magazine. </span></p>
+<p><span class="style11">  (21/11/2016) Our paper <a href="paper/ic2017.pdf">"Fog Orchestration for Internet of Things Services"</a>&nbsp; is accepted by IEEE Internet Computing magazine. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (07/01/2017) I passed the viva and obtained my Ph.D degree. </span></p>
+<p><span class="style11">  (07/01/2017) I passed the viva and obtained my Ph.D degree. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/08/2017) The work of rapid docker container deployment was accepted by IEEE HPCC 2017. </span></p>
+<p><span class="style11">  (18/08/2017) The work of rapid docker container deployment was accepted by IEEE HPCC 2017. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/09/2017) The work of machine learning based node performance analyzer was accepted by IEEE ICPADS 2017. </span></p>
+<p><span class="style11">  (01/09/2017) The work of machine learning based node performance analyzer was accepted by IEEE ICPADS 2017. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/09/2017) The work of efficient resource overselling was accepted by ACM SOSP 2017 poster session. </span></p>
+<p><span class="style11">  (28/09/2017) The work of efficient resource overselling was accepted by ACM SOSP 2017 poster session. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (08/11/2017) I moved to University of Leeds UK as a research fellow. </span></p>
+<p><span class="style11">  (08/11/2017) I moved to University of Leeds UK as a research fellow. </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participation and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
-
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
-
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair. </span></p>
+<p><span class="style11">  (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participation and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
+<p><span class="style11">  (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
+<p><span class="style11">  (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair. </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (15/07/2019) Our work "GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds" has been accepted to publish in IEEE Trans. on Parallel and Distributed Systems (TPDS). </span></p>
+<p><span class="style11">  (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
+
+
+
 
 
 
